# HydroThermal_Nexus_AI

./: .gitignore  Dockerfile  HydroThermal_Nexus_AI_Portfolio.pptx  README.md  SCALING_STRATEGY.md  actuators.py  ai_assistant.py  alert_manager.py  app.py  config.py  data_processor.py  digital_twin.py  docker-compose.yml  ml_engine.py  pyproject.toml  rca_engine.py  report_generator.py  requirements-streamlit.txt  requirements.txt  vercel.json
.streamlit/: config.toml
assets/: styles.css
backend/: __init__.py  api.py  database.py  security.py
