[project]
name = "hydrothermal-nexus-ai"
version = "2.0.0"
description = "FastAPI backend for HydroThermal Nexus-AI"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "pydeck>=0.8.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "reportlab>=4.0.0"
]

[tool.vercel]
entrypoint = "backend.api:app"
